@@ -16,11 +16,14 @@
 #include "utility.h"
 #include "factor.h"
 
-#define AKS_VARIANT_V6          1    /* The V6 paper with Lenstra impr */
-#define AKS_VARIANT_BORNEMANN   2    /* Based on Folkmar Bornemann's impl */
-#define AKS_VARIANT_BERNEXAMPLE 3    /* AKS-Bernstein-Morain */
+#define AKS_VARIANT_V6        1    /* The V6 paper with Lenstra impr */
+#define AKS_VARIANT_BERN21    2    /* AKS-Bernstein-Morain theorem 2.1 */
+#define AKS_VARIANT_BERN22    3    /* AKS-Bernstein-Morain theorem 2.2 */
+#define AKS_VARIANT_BERN23    4    /* AKS-Bernstein-Morain theorem 2.3 */
+#define AKS_VARIANT_BORNEMANN 5    /* Based on Folkmar Bornemann's impl */
+#define AKS_VARIANT_BERN41    6    /* Bernstein 2003, theorem 4.1 */
 
-#define AKS_VARIANT  AKS_VARIANT_BORNEMANN
+#define AKS_VARIANT  AKS_VARIANT_BERN41
 
 static mpz_t _bgcd;
 static mpz_t _bgcd2;
@@ -1689,7 +1692,9 @@ static int test_anr(UV a, mpz_t n, UV r, mpz_t* px, mpz_t* py)
   return retval;
 }
 
-#if AKS_VARIANT == AKS_VARIANT_BORNEMANN
+/* TODO: is_primitive_root, mpz_logn, mpz_log2 should move to utilities */
+
+#if AKS_VARIANT != AKS_VARIANT_V6
 static int is_primitive_root(mpz_t n, UV r)
 {
   mpz_t m, modr;
@@ -1717,6 +1722,7 @@ END_PRIMROOT:
   mpz_clear(modr);
   return ret;
 }
+#endif
 
 static double mpz_logn(mpz_t n)
 {
@@ -1725,9 +1731,15 @@ static double mpz_logn(mpz_t n)
   logn = log(logn) + (log(2) * exp);
   return logn;
 }
-#endif
 
-#if AKS_VARIANT == AKS_VARIANT_BERNEXAMPLE
+static double mpz_log2(mpz_t n) {
+  long exp;
+  double logn = mpz_get_d_2exp(&exp, n);
+  logn = exp + log(logn)/log(2);
+  return logn;
+}
+
+#if AKS_VARIANT == AKS_VARIANT_BERN21
 static UV largest_factor(UV n) {
   UV p = 2;
   PRIME_ITERATOR(iter);
@@ -1746,6 +1758,7 @@ int _GMP_is_aks_prime(mpz_t n)
   mpz_t *px, *py;
   int retval;
   UV i, s, r, a;
+  UV starta = 1;
   int _verbose = get_verbose_level();
 
   if (mpz_cmp_ui(n, 4) < 0)
@@ -1762,23 +1775,14 @@ int _GMP_is_aks_prime(mpz_t n)
   {
     mpz_t sqrtn, t;
     double log2n;
-    UV limit;
+    UV limit, startr;
     PRIME_ITERATOR(iter);
 
     mpz_init(sqrtn);
     mpz_sqrt(sqrtn, n);
 
-    /* limit should be floor( log2(n) ** 2 ).  The simple GMP solution is
-     * to get ceil(log2(n)) via mpz_sizeinbase(n,2) and square, but that
-     * overcalculates by a fair amount.  We'll calculate float log2n as:
-     *   ceil(log2(n**k)) / k  [mpz_sizeinbase(n,2) <=> ceil(log2(n))]
-     * which gives us a value that slightly overestimates log2(n).
-     */
-    mpz_init(t);
-    mpz_pow_ui(t, n, 32);
-    log2n = ((double) mpz_sizeinbase(t, 2) + 0.000001) / 32.0;
+    log2n = mpz_log2(n);
     limit = (UV) floor( log2n * log2n );
-    mpz_clear(t);
 
     if (_verbose>1) gmp_printf("# AKS checking order_r(%Zd) to %"UVuf"\n", n, (unsigned long) limit);
 
@@ -1787,11 +1791,15 @@ int _GMP_is_aks_prime(mpz_t n)
      * far too slow to matter either way.  Composite r is ok here, but it will
      * always end up prime, so save time and just check primes. */
     retval = 0;
+    /* Start order search at a good spot.  Idea from Nemana and Venkaiah. */
+    startr = (mpz_sizeinbase(n,2)-1) * (mpz_sizeinbase(n,2)-1);
+    startr = (startr < 1002) ? 2 : startr - 100;
     for (r = 2; /* */; r = prime_iterator_next(&iter)) {
       if (mpz_divisible_ui_p(n, r) ) /* r divides n.  composite. */
         { retval = 0; break; }
       if (mpz_cmp_ui(sqrtn, r) <= 0) /* no r <= sqrtn divides n.  prime. */
         { retval = 1; break; }
+      if (r < startr) continue;
       if (mpz_order_ui(r, n, limit) > limit)
         { retval = 2; break; }
     }
@@ -1799,9 +1807,7 @@ int _GMP_is_aks_prime(mpz_t n)
     mpz_clear(sqrtn);
     if (retval != 2) return retval;
 
-    /* Bernstein 2002 suggests we could use:
-     *   s = (UV) floor( ceil(sqrt(((double)(r-1))/3.0)) * log2n );
-     * here, by Minkowski's theorem.  r-1 is really phi(r).  */
+    /* Since r is prime, phi(r) = r-1. */
     s = (UV) floor( sqrt(r-1) * log2n );
   }
 #elif AKS_VARIANT == AKS_VARIANT_BORNEMANN /* Bernstein + Voloch */
@@ -1848,30 +1854,32 @@ int _GMP_is_aks_prime(mpz_t n)
       { mpz_clear(tmp); return 1; }
     mpz_clear(tmp);
   }
-
-#elif AKS_VARIANT == AKS_VARIANT_BERNEXAMPLE
-  {
+#elif AKS_VARIANT == AKS_VARIANT_BERN21
+  { /* Bernstein 2003, theorem 2.1 (simplified) */
+    UV q;
     double slim, scmp, x;
     mpz_t t, t2;
     PRIME_ITERATOR(iter);
     mpz_init(t);  mpz_init(t2);
-    r = 0;
-    s = 0;
+    r = s = 0;
     while (1) {
-      UV q, tmp;
-      /* todo: Check r|n and r >= sqrt(n) */
+      /* todo: Check r|n and r >= sqrt(n) here instead of waiting */
       if (mpz_cmp_ui(n, r) <= 0) break;
       r = prime_iterator_next(&iter);
       q = largest_factor(r-1);
       mpz_set_ui(t, r);
       mpz_powm_ui(t, n, (r-1)/q, t);
       if (mpz_cmp_ui(t, 1) <= 0) continue;
+      scmp = 2 * floor(sqrt(r)) * mpz_log2(n);
 
-      slim = 40 * (r-1);
-      scmp = 2 * floor(sqrt(r)) * log(mpz_get_d(n))/log(2);
+      slim = 20 * (r-1);
+
+      /* Check viability */
+      mpz_bin_uiui(t, q+slim-1, slim); if (mpz_log2(t) < scmp) continue;
+
       for (s = 2; s < slim; s++) {
         mpz_bin_uiui(t, q+s-1, s);
-        if (log(mpz_get_d(t))/log(2) > scmp) break;
+        if (mpz_log2(t) > scmp) break;
       }
       if (s < slim) break;
     }
@@ -1880,6 +1888,165 @@ int _GMP_is_aks_prime(mpz_t n)
     if (_GMP_trial_factor(n, 2, s) > 1)
       return 0;
   }
+#elif AKS_VARIANT == AKS_VARIANT_BERN22
+  { /* Bernstein 2003, theorem 2.2 (simplified) */
+    UV q;
+    double slim, scmp, x;
+    mpz_t t, t2;
+    PRIME_ITERATOR(iter);
+    mpz_init(t);  mpz_init(t2);
+    r = s = 0;
+    while (1) {
+      /* todo: Check r|n and r >= sqrt(n) here instead of waiting */
+      if (mpz_cmp_ui(n, r) <= 0) break;
+      r = prime_iterator_next(&iter);
+      if (!is_primitive_root(n,r)) continue;
+      q = r-1;   /* Since r is prime, phi(r) = r-1 */
+      scmp = 2 * floor(sqrt(r-1)) * mpz_log2(n);
+
+      slim = 20 * (r-1);
+
+      /* Check viability */
+      mpz_bin_uiui(t, q+slim-1, slim); if (mpz_log2(t) < scmp) continue;
+
+      for (s = 2; s < slim; s++) {
+        mpz_bin_uiui(t, q+s-1, s);
+        if (mpz_log2(t) > scmp) break;
+      }
+      if (s < slim) break;
+    }
+    mpz_clear(t);  mpz_clear(t2);
+    prime_iterator_destroy(&iter);
+    if (_GMP_trial_factor(n, 2, s) > 1)
+      return 0;
+  }
+#elif AKS_VARIANT == AKS_VARIANT_BERN23
+  { /* Bernstein 2003, theorem 2.3 (simplified) */
+    UV q, d, limit;
+    double slim, scmp, sbin, x, log2n;
+    mpz_t t, t2;
+    PRIME_ITERATOR(iter);
+    mpz_init(t);  mpz_init(t2);
+    log2n = mpz_log2(n);
+    limit = (UV) floor( log2n * log2n );
+    r = 2;
+    s = 0;
+    while (1) {
+      /* todo: Check r|n and r >= sqrt(n) here instead of waiting */
+      if (mpz_cmp_ui(n, r) <= 0) break;
+      r++;
+      UV gcd = mpz_gcd_ui(NULL, n, r);
+      if (gcd != 1) { mpz_clear(t); mpz_clear(t2); return 0; }
+      UV v = mpz_order_ui(r, n, limit);
+      if (v >= limit) continue;
+
+      mpz_set_ui(t2, r);
+      totient(t, t2);
+      q = mpz_get_ui(t);
+      UV phiv = q/v;
+      /* printf("phi(%lu)/v = %lu/%lu = %lu\n", r, q, v, phiv); */
+
+      /* This is extremely inefficient. */
+
+      /* Choose an s value we'd be happy with */
+      slim = 20 * (r-1);
+
+      /* Quick check to see if it could work with s=slim, d=1 */
+      mpz_bin_uiui(t, q+slim-1, slim);
+      sbin = mpz_log2(t);
+      if (sbin < 2*floor(sqrt(q))*log2n)
+        continue;
+
+      for (s = 2; s < slim; s++) {
+        mpz_bin_uiui(t, q+s-1, s);
+        sbin = mpz_log2(t);
+        if (sbin < 2*floor(sqrt(q))*log2n) continue;   /* d=1 */
+        /* Check each number dividing phi(r)/v */
+        for (d = 2; d < phiv; d++) {
+          if ((phiv % d) != 0) continue;
+          scmp = 2 * d * floor(sqrt(q/d)) * log2n;
+          if (sbin < scmp) break;
+        }
+        /* if we did not exit early, this s worked for each d.  This s wins. */
+        if (d >= phiv) break;
+      }
+      if (s < slim) break;
+    }
+    mpz_clear(t);  mpz_clear(t2);
+    prime_iterator_destroy(&iter);
+    if (_GMP_trial_factor(n, 2, s) > 1)
+      return 0;
+  }
+#elif AKS_VARIANT == AKS_VARIANT_BERN41
+  {
+    double const log2n = mpz_log2(n);
+    double const r0 = 0.010 * log2n * log2n;
+    double scmp;
+    UV d, j, slim;
+    mpz_t tmp, tmp2;
+    PRIME_ITERATOR(iter);
+
+    mpz_init(tmp);  mpz_init(tmp2);
+    prime_iterator_setprime(&iter, (UV) r0);
+    r = prime_iterator_next(&iter);
+    while (!is_primitive_root(n,r) || r < 3)
+      r = prime_iterator_next(&iter);
+    prime_iterator_destroy(&iter);
+
+    d = (UV) (0.5 * (r-1) + 0.5);
+    i = (UV) (0.475 * (r-1) + 0.5);
+    j = i;
+
+    /*gmp_printf("for n=%Zd chose r=%lu d=%lu i=%lu j=%lu\n", n, r, d, i, j);*/
+    /* Ensure conditions are correct */
+    if (d > r-2)     d = r-2;
+    if (i > d)       i = d;
+    if (j > (r-2-d)) j = r-2-d;
+
+    /* Find a suitable s */
+
+    slim = (UV) (8*(r-1));   /* This could be tightened up.  Depends on r0! */
+    scmp = ceil(sqrt( (r-1)/3.0 )) * mpz_log2(n);
+    { /* Binary search for first s in [1,slim] where x >= 0 */
+      UV bi = 1;
+      UV bj = slim;
+      while (bi < bj) {
+        s = bi + (bj-bi)/2;
+        mpz_bin_uiui(tmp2, 2*s, i);
+        mpz_bin_uiui(tmp, d, i);       mpz_mul(tmp2, tmp2, tmp);
+        mpz_bin_uiui(tmp, 2*s-i, j);   mpz_mul(tmp2, tmp2, tmp);
+        mpz_bin_uiui(tmp, r-2-d, j);   mpz_mul(tmp2, tmp2, tmp);
+        double left = mpz_log2(tmp2);
+        if (left < scmp)  bi = s+1;
+        else              bj = s;
+      }
+      /* Our S goes from 2 to s+1. */
+      starta = 2;
+      s = s+1;
+    }
+    /* printf("chose r=%lu s=%lu d = %lu i = %lu j = %lu\n", r, s, d, i, j); */
+
+    /* Check divisibility to (s-1)^2 to cover both gcd conditions */
+    slim = (s-1)*(s-1);
+    if (_verbose > 1) printf("# aks trial to %"UVuf"\n", slim);
+    if (_GMP_trial_factor(n, 2, slim) > 1)
+      { mpz_clear(tmp); mpz_clear(tmp2); return 0; }
+    mpz_sqrt(tmp, n);
+    if (mpz_cmp_ui(tmp, slim) <= 0)
+      { mpz_clear(tmp); mpz_clear(tmp2); return 1; }
+
+    /* Check b^(n-1) = 1 mod n for b in [2..s] */
+    mpz_sub_ui(tmp2, n, 1);
+    for (i = 2; i <= s; i++) {
+      mpz_set_ui(tmp, i);
+      mpz_powm(tmp, tmp, tmp2, n);
+      if (mpz_cmp_ui(tmp, 1) != 0)
+        { mpz_clear(tmp); mpz_clear(tmp2); return 0; }
+    }
+
+    mpz_clear(tmp);  mpz_clear(tmp2);
+  }
+
 #endif
 
   if (_verbose) gmp_printf("# AKS %Zd.  r = %"UVuf" s = %"UVuf"\n", n, (unsigned long) r, (unsigned long) s);
@@ -1895,7 +2062,7 @@ int _GMP_is_aks_prime(mpz_t n)
   }
 
   retval = 1;
-  for (a = 1; a <= s; a++) {
+  for (a = starta; a <= s; a++) {
     if (! test_anr(a, n, r, px, py) ) {
       retval = 0;
       break;
