@@ -18,7 +18,10 @@ Revision history for Perl module Math::Prime::Util::GMP
     [PERFORMANCE]
 
     - Speedup partial sieve with large input.
+
     - next_prime and prev_prime sieve deeper.  ~5% faster with large inputs.
+
+    - AKS using Bernstein (2003) theorem 4.1.  10-20x faster.
 
 0.35 2015-12-13
 
